# lsfiles

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.rst  genindex.html  index.html  lsfiles.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  whitelist.py
.github/workflows/: build.yaml  ci.yml  codeql-analysis.yml
_modules/: index.html
_modules/lsfiles/: _indexing.html
docs/: conf.py  index.rst  lsfiles.rst
lsfiles/: __init__.py  _indexing.py  _objects.py  _version.py
tests/: TESTS.md  __init__.py  _environ.py  _test.py  conftest.py
