[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["lsfiles/__main__.py", "whitelist.py"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Path object VC index"
license = "MIT"
name = "lsfiles"
readme = "README.rst"
version = "0.1.2"

[tool.poetry.dependencies]
gitspy = "^0"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
ipython = "^8.6.0"
pre-commit = "^2.21.0"
pyaud = "^4.0.2"
pytest = "^7.2.0"
restview = "^3.0.0"

[tool.pyaud.audit]
modules = [
  "const",
  "docs",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "sort-pyproject",
  "test",
  "toc",
  "typecheck",
  "unused",
  "whitelist"
]

[tool.pyaud.clean]
exclude = ["*.egg*", ".env", ".mypy_cache", "instance"]

[tool.pyaud.indexing]
exclude = ["conf.py", "setup.py", "whitelist.py"]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/lsfiles/log/lsfiles.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = ["default"]
level = "DEBUG"
propagate = false

[tool.pyaud.packages]
exclude = []
name = "lsfiles"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report",
  "--durations=5",
  "-vv",
  "term-missing"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["*.egg-info", ".git", ".idea", ".mypy_cache", "docs", "prof"]
