[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "whitelist.py"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Path object VC index"
documentation = "https://lsfiles.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/lsfiles/"
keywords = [
  "git",
  "index",
  "lsfiles",
  "oop",
  "vc"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "lsfiles"
readme = "README.rst"
repository = "https://github.com/jshwi/lsfiles"
version = "0.4.0"

[tool.poetry.dependencies]
gitpython = "^3.1.31"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.8.0"
ipython = "^8.3.0"
pre-commit = "^3.0.4"
pyaud = "^5.0.1"
pylint = "2.16.2"
pytest = "^7.1.2"
restview = "^3.0.0"
sphinx-toolbox = "^3.2.0"

[tool.pyaud]
audit = [
  "const",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
  (?x)^(
    | docs\/conf\.py
    | whitelist\.py
  )$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
